--- a/.gitignore
+++ b/.gitignore
@@ -74,4 +74,7 @@ Plugins/*/Intermediate/*
 DerivedDataCache/*
 
 # Starter Content
-Content/StarterContent
+Content/StarterContent/*
+!Content/StarterContent/Props/
+Content/StarterContent/Props/*
+!Content/StarterContent/Props/SM_Door.uasset
